examples/error/ch0311_err2.jle
# This Program calculates the cost of a rug

display "Let's calculate the cost of a rug", nl;

display "Enter the length and width in feet";
input l;
input w;

display "What is the cost per square foot?", nl;
input c;

cost := l*w*c;
    
# missing comma between the display of the string and the variable
display "The cost of the rug is $" cost;